...
                    NavigationDestination(
                      icon: Icon(Icons.calendar_today_outlined),
                      label: 'Compete',
                    ),
                    NavigationDestination(
                      icon: Icon(Icons.person_outline),
                      label: 'Me',
                    ),
                  ],
                ),
              ),
            ),
          ),
...
